Actualización 1-19 de marzo

--- a/temas.css
+++ b/temas.css
@@ -1,18 +1,5 @@
 .contenedor{
-
-width: 2000px;
-height: 100px;
-background-color: rgb(255, 163, 163);
-
-
-}
-
-.texto-1{
-
-
-width: 700px;
-height: 100px;
-background-color: aquamarine;
-
-
+width: 1000px;
+height:200PX ;
+background-color: aqua;
 }
