--- a/temas.css
+++ b/temas.css
@@ -1,5 +1,6 @@
-.contenedor{
-width: 1000px;
-height:200PX ;
-background-color: aqua;
+body{
+    width: 200px;
+    height: 500px;
+
+    background-color: aqua;
 }
