--- a/menu.css
+++ b/menu.css
@@ -21,8 +21,8 @@ ul, ol {
 }
 
 .nav li a {
-    background-color: #0d1acf;
-    color: #080808;
+    background-color: #dd8add;
+    color: #000000;
     text-decoration: none;
     padding: 10px 12px;
     display: block;
