--- a/menu.css
+++ b/menu.css
@@ -21,7 +21,7 @@ ul, ol {
 }
 
 .nav li a {
-    background-color: #dd8add;
+    background-color: #ffffff;
     color: #000000;
     text-decoration: none;
     padding: 10px 12px;
@@ -29,7 +29,7 @@ ul, ol {
 }
 
 .nav li a:hover {
-    background-color: #ef04e3;
+    background-color: #ffffff;
 }
 
 .nav li ul {
