--- a/estilos.css
+++ b/estilos.css
@@ -1,13 +1,12 @@
 /* Temas del segundo período*/
 
 .texto{
-   
+    margin:2% 0 0 25% ;
     font-size: 50px;
     padding-top: 140px;
-    text-align: justify;
-    color:white
-    @import url(<link href="https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Hand:wght@400..700&display=swap" rel="stylesheet">);
-    color: #ffffff;
+    text-align: center;
+    color:white;
+    @import url(<link href="https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Hand:wght@400..700&display=swap" rel="stylesheet">)
 }
 .principal{
    display: flex;
@@ -22,6 +21,12 @@ body{
     color: white;
 }
 .titulo{
-    font-size: 50px
-    color: #ffffff
+    font-size: 50px;
+    color: #ffffff;
+}
+
+.tc{
+    color:white; 
+    align-items: center;
+    text-align: center;
 }
