--- a/estilos.css
+++ b/estilos.css
@@ -13,6 +13,7 @@
      
 }
 body{
+
     background-image: url("pexels-mahdibafande-13800327.jpg");
     background-repeat: no-repeat;
     background-position: center;
@@ -29,4 +30,8 @@ body{
     color:white; 
     align-items: center;
     text-align: center;
+}
+.img{
+    width: 600px;
+    height: 400px;
 }
